grid container layout fix gap and p tag marginright

--- a/style.css
+++ b/style.css
@@ -237,6 +237,6 @@ ul {
   }
 
   p{
-    margin-right: 1rem;
+    margin-right: 5rem;
   }
 }
